fix: comment messages