@@ -5,9 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.when;
 
-import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
 import com.odoru.statsservice.client.BadgeClient;
 import com.odoru.statsservice.client.CompetitionClient;
 import com.odoru.statsservice.client.LessonClient;
@@ -20,157 +17,152 @@ import com.odoru.statsservice.dto.LessonDto;
 import com.odoru.statsservice.dto.MemberDto;
 import com.odoru.statsservice.dto.StudentCompetitionResultDto;
 import com.odoru.statsservice.dto.StudentCoursePresenceDto;
+import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-/**
- * Unit tests for the StatsService class.
- */
 @ExtendWith(MockitoExtension.class)
 public class StatsServiceTest {
 
-  @Mock
-  private MemberClient memberClient;
+    @Mock
+    private MemberClient memberClient;
 
-  @Mock
-  private LessonClient lessonClient;
+    @Mock
+    private LessonClient lessonClient;
 
-  @Mock
-  private CompetitionClient competitionClient;
+    @Mock
+    private CompetitionClient competitionClient;
 
-  @Mock
-  private BadgeClient badgeClient;
+    @Mock
+    private BadgeClient badgeClient;
 
-  @InjectMocks
-  private StatsService statsService;
+    @InjectMocks
+    private StatsService statsService;
 
-  /**
-   * Tests course summary calculations.
-   */
-  @Test
-  public void testGetCourseSummary() {
-    final LessonDto lesson1 = LessonDto.builder().id("l-1").build();
-    final LessonDto lesson2 = LessonDto.builder().id("l-2").build();
+    @Test
+    public void testGetCourseSummary() {
+        final LessonDto lesson1 = LessonDto.builder().id("l-1").build();
+        final LessonDto lesson2 = LessonDto.builder().id("l-2").build();
 
-    when(lessonClient.getAllLessons()).thenReturn(List.of(lesson1, lesson2));
-    when(badgeClient.getLessonAttendees("l-1")).thenReturn(List.of("s-1"));
-    when(badgeClient.getLessonAttendees("l-2"))
-        .thenReturn(List.of("s-1", "s-2"));
+        when(lessonClient.getAllLessons()).thenReturn(
+            List.of(lesson1, lesson2)
+        );
+        when(badgeClient.getLessonAttendees("l-1")).thenReturn(List.of("s-1"));
+        when(badgeClient.getLessonAttendees("l-2")).thenReturn(
+            List.of("s-1", "s-2")
+        );
 
-    final CourseSummaryDto summary = statsService.getCourseSummary();
+        final CourseSummaryDto summary = statsService.getCourseSummary();
 
-    assertNotNull(summary);
-    assertEquals(2, summary.getTotalCourses());
-    assertEquals(1.5, summary.getAverageAttendance());
-  }
+        assertNotNull(summary);
+        assertEquals(2, summary.getTotalCourses());
+        assertEquals(1.5, summary.getAverageAttendance());
+    }
 
-  /**
-   * Tests fetching course attendance student profiles.
-   */
-  @Test
-  public void testGetLessonAttendance() {
-    final MemberDto student = MemberDto.builder()
-        .id("s-1")
-        .firstName("John")
-        .build();
+    @Test
+    public void testGetLessonAttendance() {
+        final MemberDto student = MemberDto.builder()
+            .id("s-1")
+            .firstName("John")
+            .build();
 
-    when(lessonClient.getLessonById("l-1")).thenReturn(new LessonDto());
-    when(badgeClient.getLessonAttendees("l-1")).thenReturn(List.of("s-1"));
-    when(memberClient.getMemberById("s-1")).thenReturn(student);
+        when(lessonClient.getLessonById("l-1")).thenReturn(new LessonDto());
+        when(badgeClient.getLessonAttendees("l-1")).thenReturn(List.of("s-1"));
+        when(memberClient.getMemberById("s-1")).thenReturn(student);
 
-    final LessonAttendanceDto attendance = statsService.getLessonAttendance(
-        "l-1");
+        final LessonAttendanceDto attendance = statsService.getLessonAttendance(
+            "l-1"
+        );
 
-    assertNotNull(attendance);
-    assertEquals(1, attendance.getPresentCount());
-    assertEquals("John", attendance.getPresentStudents()
-        .get(0).getFirstName());
-  }
+        assertNotNull(attendance);
+        assertEquals(1, attendance.getPresentCount());
+        assertEquals(
+            "John",
+            attendance.getPresentStudents().get(0).getFirstName()
+        );
+    }
 
-  /**
-   * Tests student course presence logs compilation.
-   */
-  @Test
-  public void testGetStudentCoursePresence() {
-    final MemberDto student = MemberDto.builder()
-        .id("s-1")
-        .expertiseLevel(3)
-        .build();
+    @Test
+    public void testGetStudentCoursePresence() {
+        final MemberDto student = MemberDto.builder()
+            .id("s-1")
+            .expertiseLevel(3)
+            .build();
 
-    final LessonDto lesson1 = LessonDto.builder()
-        .id("l-1")
-        .targetLevel(3)
-        .dateTime(LocalDateTime.now())
-        .build();
+        final LessonDto lesson1 = LessonDto.builder()
+            .id("l-1")
+            .targetLevel(3)
+            .dateTime(LocalDateTime.now())
+            .build();
 
-    when(memberClient.getMemberById("s-1")).thenReturn(student);
-    when(lessonClient.getAllLessons()).thenReturn(List.of(lesson1));
-    when(badgeClient.getStudentAttendedLessons("s-1")).thenReturn(List.of());
+        when(memberClient.getMemberById("s-1")).thenReturn(student);
+        when(lessonClient.getAllLessons()).thenReturn(List.of(lesson1));
+        when(badgeClient.getStudentAttendedLessons("s-1")).thenReturn(
+            List.of()
+        );
 
-    final List<StudentCoursePresenceDto> list = statsService
-        .getStudentCoursePresence("s-1", null, null);
+        final List<StudentCoursePresenceDto> list =
+            statsService.getStudentCoursePresence("s-1", null, null);
 
-    assertNotNull(list);
-    assertEquals(1, list.size());
-    assertFalse(list.get(0).isPresent());
-  }
+        assertNotNull(list);
+        assertEquals(1, list.size());
+        assertFalse(list.get(0).isPresent());
+    }
 
-  /**
-   * Tests student competition results logs compilation.
-   */
-  @Test
-  public void testGetStudentCompetitionResults() {
-    final MemberDto student = MemberDto.builder()
-        .id("s-1")
-        .expertiseLevel(3)
-        .build();
+    @Test
+    public void testGetStudentCompetitionResults() {
+        final MemberDto student = MemberDto.builder()
+            .id("s-1")
+            .expertiseLevel(3)
+            .build();
 
-    final CompetitionDto comp1 = CompetitionDto.builder()
-        .id("c-1")
-        .targetLevel(3)
-        .dateTime(LocalDateTime.now())
-        .build();
+        final CompetitionDto comp1 = CompetitionDto.builder()
+            .id("c-1")
+            .targetLevel(3)
+            .dateTime(LocalDateTime.now())
+            .build();
 
-    final CompetitionResultDto result = CompetitionResultDto.builder()
-        .competitionId("c-1")
-        .score(8.2)
-        .build();
+        final CompetitionResultDto result = CompetitionResultDto.builder()
+            .competitionId("c-1")
+            .score(8.2)
+            .build();
 
-    when(memberClient.getMemberById("s-1")).thenReturn(student);
-    when(competitionClient.getAllCompetitions()).thenReturn(List.of(comp1));
-    when(competitionClient.getStudentResults("s-1"))
-        .thenReturn(Collections.singletonList(result));
+        when(memberClient.getMemberById("s-1")).thenReturn(student);
+        when(competitionClient.getAllCompetitions()).thenReturn(List.of(comp1));
+        when(competitionClient.getStudentResults("s-1")).thenReturn(
+            Collections.singletonList(result)
+        );
 
-    final List<StudentCompetitionResultDto> list = statsService
-        .getStudentCompetitionResults("s-1", null, null);
+        final List<StudentCompetitionResultDto> list =
+            statsService.getStudentCompetitionResults("s-1", null, null);
 
-    assertNotNull(list);
-    assertEquals(1, list.size());
-    assertEquals(8.2, list.get(0).getScore());
-  }
+        assertNotNull(list);
+        assertEquals(1, list.size());
+        assertEquals(8.2, list.get(0).getScore());
+    }
 
-  /**
-   * Tests fetching the competition count by level.
-   */
-  @Test
-  public void testGetCompetitionsCountByLevel() {
-    final CompetitionDto comp1 = CompetitionDto.builder()
-        .id("c-1")
-        .targetLevel(3)
-        .build();
-    final CompetitionDto comp2 = CompetitionDto.builder()
-        .id("c-2")
-        .targetLevel(4)
-        .build();
+    @Test
+    public void testGetCompetitionsCountByLevel() {
+        final CompetitionDto comp1 = CompetitionDto.builder()
+            .id("c-1")
+            .targetLevel(3)
+            .build();
+        final CompetitionDto comp2 = CompetitionDto.builder()
+            .id("c-2")
+            .targetLevel(4)
+            .build();
 
-    when(competitionClient.getAllCompetitions())
-        .thenReturn(List.of(comp1, comp2));
+        when(competitionClient.getAllCompetitions()).thenReturn(
+            List.of(comp1, comp2)
+        );
 
-    final long count = statsService.getCompetitionsCountByLevel(3);
+        final long count = statsService.getCompetitionsCountByLevel(3);
 
-    assertEquals(1, count);
-  }
+        assertEquals(1, count);
+    }
 }
